static/search/css/slider.css
input[type=range] {
  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
  width: 100%; /* Specific width is required for Firefox. */
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
}

input[type=range]:focus {
  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
}

input[type=range]::-ms-track {
  width: 100%;
  cursor: pointer;
  background: transparent; /* Hides the slider so custom styles can be added */
  border-color: transparent;
  color: transparent;
}

/* Special styling for WebKit/Blink */
input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: 1px solid #000000;
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: #000;
  cursor: pointer;
  margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
  opacity: 0.8;
}

/* All the same stuff for Firefox */
input[type=range]::-moz-range-thumb {
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: #000;
  cursor: pointer;
  opacity: 0.8;
}

/* All the same stuff for IE */
input[type=range]::-ms-thumb {
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: #000;
  cursor: pointer;
  opacity: 0.8;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #222;
  border-radius: 1.3px;
  border: 0.2px solid #010101;
  opacity: 0.5;
}

input[type=range]::-moz-range-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #222;
  border-radius: 1.3px;
  border: 0.2px solid #010101;
  opacity: 0.5;
}

input[type=range]::-ms-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  border-width: 16px 0;
  color: transparent;
}
input[type=range]::-ms-fill-lower ,
input[type=range]::-ms-fill-upper {
  background: #222;
  border: 0.2px solid #010101;
  border-radius: 2.6px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  opacity: 0.5;
}

output { 
  position: absolute;
    background-color: #FFFFFF;
  width: 100px; 
  height: 30px; 
  text-align: center; 
  border-style: solid;
  border-width: 1px;
  border-color: #4285F4;
  border-radius: 5px; 
  display: inline-block; 
  font: bold 12px/24px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  bottom: 175%;
  left: 0;
  box-shadow: inset 0px 0px 2px #78a9f7;  
  margin-left: -1%;
  z-index: 8888
}

output:hover {
    box-shadow: inset 0px 0px 2.5px 1px #4285F4;    
}

output:after { 
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  border-top: 10px solid #4285F4;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  margin-top: -1px;
}

#minDate, #maxDate {
    z-index:10
}
div.ui-datepicker{
 font-size:10px;
}

#slider {    
    font-size:8px;
}
.ui-datepicker{ z-index: 9999 !important;}

.ui-slider-handle {
    background: url(../../slider/handle.png) 50% 50% repeat-x !important;
    width:8px !important;
    height:40px !important;
    top:-13px !important;
    border:none !important;
}

.ui-slider-range {
    background: #4285F4;
}

